[tool.poetry]
name = "dosage-sensitive-genes-variants"
version = "0.1.0"
description = ""
authors = ["Vitor Pavinato <vitorpavinato@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
aiohttp = "^3.10.5"
pandas = "^2.2.2"
matplotlib = "^3.9.2"
streamlit = "^1.38.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
